// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AtMention should match snapshot when mentioning a group followed by punctuation 1`] = `
<Fragment>
  <span>
    <a
      aria-haspopup="dialog"
      className="group-mention-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      @developers
    </a>
  </span>
  .
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning a group that is allowed reference 1`] = `
<Fragment>
  <span>
    <a
      aria-haspopup="dialog"
      className="group-mention-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      @developers
    </a>
  </span>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning a group that is allowed reference with group highlight disabled 1`] = `
<Fragment>
  (at)-developers
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning a group that is not allowed reference 1`] = `
<Fragment>
  (at)-marketing
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning all 1`] = `
<Fragment>
  (at)-all
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning all with mixed case 1`] = `
<Fragment>
  (at)-aLL
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning current user 1`] = `
<Fragment>
  <span
    className="mention--highlight"
  >
    <a
      aria-haspopup="dialog"
      className="mention-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      @First Last
    </a>
  </span>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user 1`] = `
<Fragment>
  <span>
    <a
      aria-haspopup="dialog"
      className="mention-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      @Nick
    </a>
  </span>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user containing and followed by punctuation 1`] = `
<Fragment>
  <span>
    <a
      aria-haspopup="dialog"
      className="mention-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      @Dot Matrix
    </a>
  </span>
  .
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user containing punctuation 1`] = `
<Fragment>
  <span>
    <a
      aria-haspopup="dialog"
      className="mention-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      @Dot Matrix
    </a>
  </span>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user followed by punctuation 1`] = `
<Fragment>
  <span>
    <a
      aria-haspopup="dialog"
      className="mention-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      @Nick
    </a>
  </span>
  ...
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user with different teammate name display setting 1`] = `
<Fragment>
  <span>
    <a
      aria-haspopup="dialog"
      className="mention-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      @user1
    </a>
  </span>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user with mixed case 1`] = `
<Fragment>
  <span>
    <a
      aria-haspopup="dialog"
      className="mention-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      @Nick
    </a>
  </span>
</Fragment>
`;

exports[`components/AtMention should match snapshot when not mentioning a user 1`] = `
<Fragment>
  (at)-notauser
</Fragment>
`;

exports[`components/AtMention should match snapshot when not mentioning a user with mixed case 1`] = `
<Fragment>
  (at)-NOTAuser
</Fragment>
`;
